Fixed up issues with closing the browser closing the entire environment